Added call frequency limit as preference for Alpha Vantage quote download